--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
         ]
     },
     "require": {
+        "illuminate/support": "5.1.*",
         "facebook/php-sdk-v4": "4.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0@dev",
         "mockery/mockery": "^1.0@dev"
-    }
-    "prefer-stable": true,
+    },
     "support": {
         "email": "eutkuuysal@gmail.com"
     },
