--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "facebook/php-sdk-v4": "4.0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
-        "mockery/mockery": "^1.0"
+        "phpunit/phpunit": "~5.0",
+        "mockery/mockery": "~1.0"
     },
     "minimum-stability": "dev",
     "extra": {
